Archive2/66/db02a27446bcca/output
main.cpp:22:13: error: read-only variable is not assignable
    v.acc() = 1;
    ~~~~~~~ ^
1 error generated.
